[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultratrace-ulm-pipeline"
version = "0.1.0"
description = "Standalone 3D ULM tracking and viewer tools for beamformed ultratrace data."
requires-python = ">=3.10"
dependencies = ["aria2p>=0.12.1", "h5py", "numpy", "scipy", "tqdm"]

[project.optional-dependencies]
# GPU-only MACH beamforming. Requires a CUDA host. Pick the extra matching your
# CUDA toolkit -- these pull a prebuilt cupy wheel (no source build):
#   uv sync --extra mach-cuda12   # CUDA 12.x hosts
#   uv sync --extra mach-cuda13   # CUDA 13.x hosts
# The bare "mach" alias defaults to CUDA 12. The package imports fine without any.
mach = ["torch", "mach-beamform", "cupy-cuda12x"]
mach-cuda12 = ["torch", "mach-beamform", "cupy-cuda12x"]
mach-cuda13 = ["torch", "mach-beamform", "cupy-cuda13x"]

[project.scripts]
ultratrace-ulm = "ultratrace_ulm.cli:main"

[tool.setuptools.packages.find]
include = ["ultratrace_ulm*"]

[tool.setuptools.package-data]
ultratrace_ulm = ["web/track_viewer/*", "web/volume_viewer/*", "web/launcher/*"]
